--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,38 @@
-spring.application.name=smart-fridge-uni
+spring:
+  application:
+    name: smart-fridge-api
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/smart_fridge_db
+    username: ${DB_USERNAME:smart_fridge_user}
+    password: ${DB_PASSWORD:smart_fridge_password}
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    open-in-view: false
+
+server:
+  port: 8090
+
+logging:
+  level:
+    com.smartfridge: INFO
+    org.springframework.web: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: when-authorized
